--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -1,5 +1,14 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --font1: verdana, Geneva, Tahoma, ans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
 *{
     margin: 0px;
     padding: 0px;
@@ -8,6 +17,7 @@
 html, body{
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--font1);
 }
 
 header{
@@ -19,6 +29,8 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 header p{
     padding-bottom: 50px;
@@ -36,6 +48,8 @@ section{
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -46,8 +60,10 @@ section.imagem{
     color: white;
 }
 section.imagem > p{
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.267);
-    width: 400px;
+
 }
 footer{
     background-color: black;
