--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -30,10 +30,11 @@ header h1{
     padding-top: 50px;
     font-variant: small-caps;
     font-family: var(--font2);
-    font-size: 10vw;
+    font-size: 9vw;
 }
 header p{
     padding-bottom: 50px;
+    font-size: 3vw;
 }
 a{
     color: white;
@@ -51,6 +52,9 @@ section{
     font-family: var(--font3);
     font-size: 3.5vw;
 }
+section > p{
+    padding-bottom: 2em;
+}
 section.normal{
     background-color: white;
     color: black;
@@ -58,16 +62,27 @@ section.normal{
 section.imagem{
     background-color: rgb(37, 35, 35);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.493);
+    background-size: cover;
+    background-attachment: fixed;
 }
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.267);
-
+    background-color: rgba(0, 0, 0, 0.514);
+    text-shadow: 1px 1px 0px black;
+}
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    
 }
 footer{
     background-color: black;
     color: white;
     text-align: center;
-    padding: 10px;
+    padding: 5px;
 }
